<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="0dp"
            android:id="@+id/scrollView1">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" >

            <TextView
                    android:id="@+id/idClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id" />

            <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="23dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" >

            <TextView
                    android:id="@+id/identClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ident" />

            <TextView
                    android:id="@+id/iden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="23dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" >

            <TextView
                    android:id="@+id/telClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel" />

            <TextView
                    android:id="@+id/tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="23dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" >

            <TextView
                    android:id="@+id/addrClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addr" />

            <TextView
                    android:id="@+id/addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="23dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" android:visibility="invisible">

            <TextView
                    android:id="@+id/cptClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpt" android:enabled="true"/>

            <TextView
                    android:id="@+id/cpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="23dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" android:visibility="invisible">

            <TextView
                    android:id="@+id/anc_relClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anc_rel" />

            <TextView
                    android:id="@+id/anc_rel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="23dp" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" android:visibility="invisible">

            <TextView
                    android:id="@+id/date_relClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_rel" />

            <TextView
                    android:id="@+id/date_rel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="23dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" android:visibility="invisible">

            <TextView
                    android:id="@+id/relClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rel" />

            <EditText
                    android:id="@+id/rel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="21dp"
                    android:ems="8"
                    android:inputType="numberDecimal" >
            </EditText>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

            <TextView
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" android:visibility="invisible"/>

            <DatePicker
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp" android:visibility="invisible">

            <TextView
                    android:id="@+id/situation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/situ" />

            <EditText
                    android:id="@+id/situ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:inputType="number" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <Button
                    android:id="@+id/bVueSign"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:text="@string/vue_sign" />

            <Button
                    android:id="@+id/bGeo"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="11dp"
                    android:text="@string/geo" />

            <Button
                    android:id="@+id/bSign"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <Button
                    android:id="@+id/Button02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonStyle"
                    android:text="@string/annul" />

            <Button
                    android:id="@+id/Button01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonStyle"
                    android:text="@string/valid" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>